--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,11 @@
     "jsx": "preserve",
     "incremental": true,
     "baseUrl": "./src",
+    "paths": {
+      "*": [
+        "./*"
+      ]
+    },
     "plugins": [
       {
         "name": "next"
