--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prettier": "prettier --check ."
   },
   "dependencies": {
     "@radix-ui/react-accordion": "^1.2.2",
@@ -19,7 +20,7 @@
     "clsx": "^2.1.1",
     "gray-matter": "^4.0.3",
     "lucide-react": "^0.474.0",
-    "next": "15.1.6",
+    "next": "^15.3.2",
     "next-mdx-remote": "^5.0.0",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
