chore: update deps

--- a/components.json
+++ b/components.json
@@ -10,12 +10,13 @@
     "cssVariables": true,
     "prefix": ""
   },
+  "iconLibrary": "lucide",
   "aliases": {
     "components": "components",
-    "utils": "libs/utils",
+    "utils": "lib/utils",
     "ui": "components/ui",
-    "lib": "libs",
+    "lib": "lib",
     "hooks": "hooks"
   },
-  "iconLibrary": "lucide"
+  "registries": {}
 }
