--- a/components.json
+++ b/components.json
@@ -10,6 +10,7 @@
     "cssVariables": true,
     "prefix": ""
   },
+  "iconLibrary": "lucide",
   "aliases": {
     "components": "components",
     "utils": "libs/utils",
@@ -17,5 +18,5 @@
     "lib": "libs",
     "hooks": "hooks"
   },
-  "iconLibrary": "lucide"
+  "registries": {}
 }
